fix: Align sign-in form labels to the left

--- a/journal/static/css/styles.css
+++ b/journal/static/css/styles.css
@@ -152,6 +152,12 @@ hr {
     color: #888 !important;
 }
 
+.signin-form label {
+    text-align: left;
+    display: block;
+    margin-bottom: 5px;
+}
+
 .error {
     color: red;
 }
